// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RetirementDetails renders correctly with message 1`] = `
<div>
  <div
    class="css-jof02b"
  >
    No data available
  </div>
</div>
`;

exports[`RetirementDetails renders correctly with no message 1`] = `
<div>
  <div
    class="css-jof02b"
  >
    --
  </div>
</div>
`;
